--- a/album/templates/base.html
+++ b/album/templates/base.html
@@ -6,7 +6,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}Rukun Chat{% endblock %}</title>
-    <link rel="icon" type="image/x-icon" href="/static/images/logo.jpg">
     <!-- Add Bootstrap CSS link or other stylesheets for styling -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap">
@@ -17,14 +16,12 @@
             font-family: 'Montserrat', sans-serif; /* Use Montserrat font */
 
         }
+
+
         .navbar {
         height: 70px; /* Increased height */
         background-color: #ffffff; /* Lighter color */
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Add a subtle shadow */
-        }
-
-        .navbar-collapse {
-        background-color: #ffffff; /* Lighter color */
         }
 
         .navbar-brand {
@@ -34,9 +31,8 @@
         }
 
         .navbar-logo {
-            max-height: 50px; /* Set the maximum height of the logo */
-            max-width: 100%; /* Make the logo responsive */
-            margin-right: 10px; /* Adjust margin for spacing */
+        height: 30px; /* Set the height of the logo */
+        margin-right: 10px; /* Adjust margin for spacing */
         }
 
         {% block additional_styles %}{% endblock %}
@@ -46,9 +42,10 @@
 
     {% load static %}
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light  fixed-top">
-        <a class="navbar-brand" href="{% url 'authentication:index' %}">
-            <img src="{% static 'images/logo.jpg' %}" alt="Rukun Chat Logo" class="navbar-logo">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+        <a class="navbar-brand" href="#">
+            <img src="https://w7.pngwing.com/pngs/278/613/png-transparent-crowd-drawing-cartoon-community-miscellaneous-audience-human-behavior-thumbnail.png" alt="Rukun Chat Logo" class="navbar-logo">
+            Rukun Chat
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -73,7 +70,7 @@
                     <a class="nav-link" href="{% url 'layanan:show_all_layanan' %}">Layanan</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'album:mygallery' %}">Album</a>
+                    <a class="nav-link" href="{% url 'album:' %}">Album</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'administration:view_profile' %}">Profile</a>
