Changes on agenda index template; add pengurus attribute on form

--- a/agenda/templates/agenda/detail.html
+++ b/agenda/templates/agenda/detail.html
@@ -1,6 +1,6 @@
 {% if kegiatan %}
             <p>{{ kegiatan.namaKegiatan }}</p>
-            <p>{{ kegiatan.deskripsiKegiatan|truncatechars:50 }}</p>
+            <p>{{ kegiatan.deskripsiKegiatan }}</p>
             <p>{{ kegiatan.waktuKegiatan }}</p>
     <br>
 {% else %}
