--- a/forum/templates/show_all_forum.html
+++ b/forum/templates/show_all_forum.html
@@ -15,7 +15,7 @@
   <p>Dibuat oleh: {{ forum.creator.username }}</p>
   <p>Tanggal Dibuat: {{ forum.date_created }}</p>
 
-  {% if user.is_authenticated and not user.is_staff %}
+  {% if user.is_authenticated%}
   <a href="{% url 'forum:reply_forum' forum.id %}">Reply</a>
   <a href="{% url 'forum:forum_detail' forum.id %}">Detail</a>
   {% endif %}
