--- a/agenda/templates/agenda/index.html
+++ b/agenda/templates/agenda/index.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
 
-
+{% block title %}Rukun Chat | Agenda{% endblock %}
 <!DOCTYPE html>
 <html lang="en">
 	<head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Layanan</title>
+	<title>Rukun Chat | Agenda</title>
 
 	{% block additional_styles %}
     <style>
