--- a/agenda/templates/agenda/detail.html
+++ b/agenda/templates/agenda/detail.html
@@ -106,8 +106,9 @@
         <div class="card-body">
             <h5 class="card-title">
                 <span>{{ kegiatan.namaKegiatan }}</span>
+                <span>{{ kegiatan.waktuKegiatan }}</span>
             </h5>
-            <p class="card-text">{{ kegiatan.deskripsiKegiatan }}</p>
+            <p class="card-text">{{ kegiatan.deskripsiKegiatan | linebreaks}}</p>
 
             {% if pengurus %}
                 <div class="delete-edit-buttons">
