--- a/album/templates/make_gallery.html
+++ b/album/templates/make_gallery.html
@@ -93,6 +93,10 @@
                         {% endfor %}
                       </select>
                 </div>
+                <div class="mb-3">
+                    <label for="mnewcategory" class="form-label">Add New Album</label>
+                    <input type="text" class="form-control" id="mnewcategory" name="newalbum">
+                </div>
 
 
                 <button type="submit" class="btn btn-warning ">Save</button>
